Changed the app base url

--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ OPERATOR_PASSWORD=TO_BE_GENERATED
 # The base host on which the connector will be publicly available.
 # Used when generating refresh URLs for the onboarding flow.
 # Required
-BASE_HOST=localhost:4430
+BASE_HOST=3.23.101.53:4430
 
 # If you use a proxy, tell Symfony which reverse proxy IP addresses to trust.
 # See How to Configure Symfony to Work behind a Load Balancer or a Reverse Proxy:
