--- a/examples/docker/app/config/nginx.conf
+++ b/examples/docker/app/config/nginx.conf
@@ -41,7 +41,7 @@ http {
         # Allow fpm ping and status from localhost
         location ~ ^/(fpm-status|fpm-ping)$ {
             access_log off;
-            allow localhost;
+            allow 127.0.0.1;
             deny all;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
